Bug 1848834 - Add on the end aligned columns a padding when they are at the end of the row. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D186333

--HG--
extra : moz-landing-system : lando

--- a/mail/themes/shared/mail/threadPane.css
+++ b/mail/themes/shared/mail/threadPane.css
@@ -125,6 +125,15 @@
   text-align: end;
 }
 
+/* Add on the end aligned columns a padding when they are at the end of the row. */
+.sizecol-column[colspan="2"],
+.unreadcol-column[colspan="2"],
+.totalcol-column[colspan="2"] {
+  /* 25px is the width of the column picker. */
+  padding-inline-end: calc(25px + env(scrollbar-inline-size));
+}
+
+
 [is="tree-view-table-body"]:focus > .selected button,
 [is="tree-view-table-body"]:focus-within > .selected button,
 [is="tree-view-table-body"] > .selected:focus-within button {
